--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/saathviksheerla/design-extractor-server/issues"
   },
   "homepage": "https://github.com/saathviksheerla/design-extractor-server#readme",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
